[package]
name = "aihPOS"
version = "0.0.3"
authors = ["Matthias Werner <mwerner@informatik.tu-chemnitz.de>"]
publish = false

[dependencies]
bit_field = "0.8.0"
compiler_builtins = { git = "https://github.com/rust-lang-nursery/compiler-builtins", features = ["mem"] }
compiler_error = "0.1.1"
#lazy_static = { version = "0.2.8", features = ["spin_no_std"] }

[profile.dev]
panic = "abort"
lto = false
opt-level = 1

[profile.release]
panic = "abort"
lto = false
opt-level = 3

