[package]
name = "aihpos_kernel"
version = "0.0.3"
authors = ["Matthias Werner <mwerner@informatik.tu-chemnitz.de>"]
publish = false

[features]
default = ["smallpages"]
largepages = []
smallpages = []

[dependencies]
bit_field = "0.8.0"
compiler_builtins = { git = "https://github.com/rust-lang-nursery/compiler-builtins", features = ["mem"] }
compiler_error = "0.1.1"
#lazy_static = { version = "0.2.8", features = ["spin_no_std"] }

[dependencies.boundary_tag_allocator]
path = "src/memory/heap"

[dependencies.arm6_paging]
path = "src/memory/paging"

[dependencies.pi_debug]
path = "src/debug"

[dependencies.rpi_hal]
path = "src/hal"

[dependencies.aihpos_process]
path = "src/process"

[dependencies.aihpos_sync]
path = "src/sync"

[profile.dev]
panic = "abort"
lto = false
opt-level = 1

[profile.release]
panic = "abort"
lto = false
opt-level = 2

