[package]
name = "aihpos_kernel"
version = "0.0.3"
authors = ["Matthias Werner <mwerner@informatik.tu-chemnitz.de>"]
publish = false

[features]
default = ["smallpages"]
largepages = []
smallpages = []

[dependencies]
bit_field = "0.8.0"
compiler_builtins = { git = "https://github.com/rust-lang-nursery/compiler-builtins", features = ["mem"] }

[dependencies.boundary_tag_allocator]
path = "src/memory/heap"

[profile.dev]
panic = "abort"
lto = false
opt-level = 1
#opt-level = 0

[profile.release]
panic = "abort"
lto = false
opt-level = 3

[profile.doc]
panic = "abort"
lto = false
opt-level = 0


