[package]
name = "rpi_hal"
version = "0.1.4"
authors = ["Matthias Werner <mwerner@informatik.tu-chemnitz.de>"]
publish = false

[lib]
name = "hal"
path = "lib.rs"

[dependencies]
bit_field = "0.8.0"

[dependencies.arm6_paging]
path = "../memory/paging"

[profile.dev]
panic = "abort"
lto = false
opt-level = 1

[profile.release]
panic = "abort"
lto = false
opt-level = 1

