[package]
name = "aihpos_process"
version = "0.0.1"
authors = ["Matthias Werner <mwerner@informatik.tu-chemnitz.de>"]
publish = false

[lib]
name = "process"
path = "lib.rs"

[dependencies.aihpos_sync]
path = "../sync"

[dependencies.rpi_hal]
path = "../hal"

[dependencies.pi_debug]
path = "../debug"

[profile.dev]
panic = "abort"
lto = false
opt-level = 1

[profile.release]
panic = "abort"
lto = false
opt-level = 3

