[package]
name = "arm6_paging"
version = "0.0.5"
authors = ["Matthias Werner <mwerner@informatik.tu-chemnitz.de>"]
publish = false

[lib]
name = "paging"
path = "lib.rs"

[dependencies.aihpos_sync]
path = "../../sync"

[dependencies]
bit_field = "0.8.0"

[profile.dev]
panic = "abort"
lto = false
opt-level = 0

[profile.release]
panic = "abort"
lto = false
opt-level = 3

